add redirect example
