# api/helloworld/v1/greeter.pb.validate.go
@@ -238,3 +238,213 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = SayHelloResponseValidationError{}
+
+// Validate checks the field values on LuckySearchRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *LuckySearchRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on LuckySearchRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// LuckySearchRequestMultiError, or nil if none found.
+func (m *LuckySearchRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *LuckySearchRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Keyword
+
+	if len(errors) > 0 {
+		return LuckySearchRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// LuckySearchRequestMultiError is an error wrapping multiple validation errors
+// returned by LuckySearchRequest.ValidateAll() if the designated constraints
+// aren't met.
+type LuckySearchRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m LuckySearchRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m LuckySearchRequestMultiError) AllErrors() []error { return m }
+
+// LuckySearchRequestValidationError is the validation error returned by
+// LuckySearchRequest.Validate if the designated constraints aren't met.
+type LuckySearchRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e LuckySearchRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e LuckySearchRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e LuckySearchRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e LuckySearchRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e LuckySearchRequestValidationError) ErrorName() string {
+	return "LuckySearchRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e LuckySearchRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sLuckySearchRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = LuckySearchRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = LuckySearchRequestValidationError{}
+
+// Validate checks the field values on LuckySearchResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *LuckySearchResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on LuckySearchResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// LuckySearchResponseMultiError, or nil if none found.
+func (m *LuckySearchResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *LuckySearchResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for RedirectTo
+
+	// no validation rules for StatusCode
+
+	if len(errors) > 0 {
+		return LuckySearchResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// LuckySearchResponseMultiError is an error wrapping multiple validation
+// errors returned by LuckySearchResponse.ValidateAll() if the designated
+// constraints aren't met.
+type LuckySearchResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m LuckySearchResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m LuckySearchResponseMultiError) AllErrors() []error { return m }
+
+// LuckySearchResponseValidationError is the validation error returned by
+// LuckySearchResponse.Validate if the designated constraints aren't met.
+type LuckySearchResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e LuckySearchResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e LuckySearchResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e LuckySearchResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e LuckySearchResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e LuckySearchResponseValidationError) ErrorName() string {
+	return "LuckySearchResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e LuckySearchResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sLuckySearchResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = LuckySearchResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = LuckySearchResponseValidationError{}
